Puppet server should now listen to kill signals from docker